--- a/index.html
+++ b/index.html
@@ -1,16 +1,159 @@
-let lastFrameTime = 0;
-const fps = 30;
-const frameDuration = 1000 / fps;
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WANTED!</title>
+  <style>
+    body {
+      background-color: black;
+      color: white;
+      text-align: center;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      overflow: hidden;
+      height: 100vh; /* optionnel */
+    }
+    canvas {
+      display: block;
+      margin: 20px auto;
+      border: 3px solid white;
+      background-color: black;
+      width: 95vw;      /* large responsive */
+      max-width: 800px; /* limite pour grands écrans */
+      height: auto;     /* auto pour garder ratio */
+    }
+    #messageOverlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: black;
+      color: #FF4081;
+      font-size: 48px;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 10;
+    }
+    #winMessage {
+      position: absolute;
+      top: 40%;
+      width: 100%;
+      font-size: 48px;
+      color: #00FF99;
+      text-shadow: 0 0 20px #00FF99;
+      display: none;
+      animation: fadeInOut 1.5s ease-in-out;
+      z-index: 9;
+    }
+    @keyframes fadeInOut {
+      0% { opacity: 0; transform: scale(0.9); }
+      25% { opacity: 1; transform: scale(1); }
+      75% { opacity: 1; }
+      100% { opacity: 0; transform: scale(1.05); }
+    }
+    #replayBtn {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 24px;
+      background-color: #FF4081;
+      border: none;
+      color: white;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    #timer {
+      font-size: 24px;
+      margin-top: 10px;
+      color: #FF4081;
+    }
+  </style>
+</head>
+<body>
+<audio id="bgMusic" src="musique.mp3" autoplay loop></audio>
+<h1>TROUVE BOUBOUILLE !</h1>
+<div id="timer">⏳ Temps : 10</div>
+<canvas id="gameCanvas" width="800" height="500"></canvas>
 
-function draw(timestamp) {
-  if (!playing) return;
+<div id="messageOverlay">
+  <div id="messageText">💀 Game Over</div>
+  <button id="replayBtn">Rejouer</button>
+</div>
 
-  if (!timestamp) timestamp = performance.now();
-  const delta = timestamp - lastFrameTime;
+<div id="winMessage">🎉 Gagné !</div> 
 
-  if (delta >= frameDuration) {
-    lastFrameTime = timestamp;
+<script>
+  const canvas = document.getElementById("gameCanvas");
+  const ctx = canvas.getContext("2d");
+  const timerEl = document.getElementById("timer");
+  const overlay = document.getElementById("messageOverlay");
+  const messageText = document.getElementById("messageText");
+  const replayBtn = document.getElementById("replayBtn");
+  const winMessage = document.getElementById("winMessage");
 
+  const targetImg = new Image();
+  targetImg.src = "target.png"; // image du doudou cible
+
+  const otherImagePaths = [
+    "image1.png", "image2.png", "image3.png",
+    "image4.png"
+  ];
+
+  const otherImages = otherImagePaths.map(path => {
+    const img = new Image();
+    img.src = path;
+    return img;
+  });
+
+  let doudous = [];
+  let level = 1;
+  let timer = 10;
+  let timerInterval;
+  let playing = true;
+  const maxSpeed = 5;
+  let imgSize;
+
+  // Ajuste la taille du canvas et imgSize selon la largeur affichée
+  function adjustCanvasSize() {
+    const computedStyle = getComputedStyle(canvas);
+    const width = parseFloat(computedStyle.width);
+    canvas.width = width;
+    // hauteur proportionnelle 5:8 (car 800x500)
+    canvas.height = (width * 600) / 800;
+    // taille image proportionnelle à la largeur
+    imgSize = Math.max(40, width / 20); // minimum 40px, sinon ~5% largeur
+  }
+
+   function createDoudous(count, speedMultiplier) {
+    doudous = [];
+    const targetIndex = Math.floor(Math.random() * count);
+    for (let i = 0; i < count; i++) {
+        const isTarget = i === targetIndex;
+        const img = isTarget ? targetImg : otherImages[Math.floor(Math.random() * otherImages.length)];
+
+        // La cible a une vitesse inférieure (par exemple 1/3 de la vitesse)
+        const currentSpeedMultiplier = isTarget ? speedMultiplier / 1.5 : speedMultiplier;
+
+        let dx = (Math.random() * 2 - 1) * currentSpeedMultiplier;
+        let dy = (Math.random() * 2 - 1) * currentSpeedMultiplier;
+
+        dx = Math.max(Math.min(dx, maxSpeed), -maxSpeed);
+        dy = Math.max(Math.min(dy, maxSpeed), -maxSpeed);
+
+        doudous.push({
+        img,
+        isTarget,
+        x: Math.random() * (canvas.width - imgSize),
+        y: Math.random() * (canvas.height - imgSize),
+        dx,
+        dy,
+        });
+    }
+    }   
+
+
+  function draw() {
+    if (!playing) return;
     ctx.clearRect(0, 0, canvas.width, canvas.height);
     doudous.forEach(d => {
       ctx.drawImage(d.img, d.x, d.y, imgSize, imgSize);
@@ -19,7 +162,115 @@ function draw(timestamp) {
       if (d.x < 0 || d.x > canvas.width - imgSize) d.dx *= -1;
       if (d.y < 0 || d.y > canvas.height - imgSize) d.dy *= -1;
     });
+    requestAnimationFrame(draw);
   }
 
-  requestAnimationFrame(draw);
-}
+  function startTimer() {
+    timer = 10;
+    timerEl.textContent = `⏳ Temps : ${timer}`;
+    clearInterval(timerInterval);
+    timerInterval = setInterval(() => {
+      timer--;
+      timerEl.textContent = `⏳ Temps : ${timer}`;
+      if (timer === 0) {
+        clearInterval(timerInterval);
+        showGameOver();
+      }
+    }, 1000);
+  }
+
+  function startLevel() {
+    adjustCanvasSize();
+    const count = 25 + level * 20;
+    const speed = 0.5 + level * 0.25;
+    createDoudous(count, speed);
+    startTimer();
+    playing = true;
+    draw();
+  }
+
+  function showGameOver() {
+    playing = false;
+    timerEl.textContent = "⏳ Temps : 0";
+    messageText.textContent = "💀 Game Over";
+    overlay.style.display = "flex";
+  }
+
+  function showVictoryMessage() {
+    winMessage.textContent = `🎉 Gagné niveau ${level} !`;
+    winMessage.style.display = "block";
+    setTimeout(() => {
+      winMessage.style.display = "none";
+      level++;
+      startLevel();
+    }, 1500);
+  }
+
+  function restartGame() {
+    overlay.style.display = "none";
+    level = 1;
+    startLevel();
+  }
+
+  canvas.addEventListener("click", (e) => {
+  if (!playing) return;
+
+  const rect = canvas.getBoundingClientRect();
+  const clickX = e.clientX - rect.left;
+  const clickY = e.clientY - rect.top;
+
+  // On cherche la cible dans tous les doudous sous le clic
+  let clickedTarget = false;
+  for (let i = doudous.length - 1; i >= 0; i--) {
+    const d = doudous[i];
+    if (
+      clickX >= d.x && clickX <= d.x + imgSize &&
+      clickY >= d.y && clickY <= d.y + imgSize
+    ) {
+      if (d.isTarget) {
+        clickedTarget = true;
+        break; // on peut sortir, on a trouvé la cible
+      }
+      // Si ce n'est pas la cible, on continue de chercher en dessous
+    }
+  }
+
+  if (clickedTarget) {
+    clearInterval(timerInterval);
+    playing = false;
+    showVictoryMessage();
+  }
+});
+
+
+  replayBtn.addEventListener("click", () => {
+    restartGame();
+  });
+
+  window.onload = () => {
+    startLevel();
+  };
+
+  // Recalcule la taille du canvas à chaque redimensionnement de la fenêtre (utile en mobile si rotation)
+  window.addEventListener("resize", () => {
+    if (playing) {
+      adjustCanvasSize();
+    }
+  });
+ const bgMusic = document.getElementById("bgMusic");
+let musicStarted = false;
+
+canvas.addEventListener("click", () => {
+  if (!musicStarted) {
+    bgMusic.play().catch(err => {
+      // En cas d'erreur (ex: autoplay bloqué), on peut logguer ou ignorer
+      console.log("Lecture musique bloquée :", err);
+    });
+    musicStarted = true;
+  }
+});
+
+</script>
+
+</body>
+</html>
